platforms/gke/base/use-cases/inference-ref-arch/terraform/workflow_api/templates/workflow-api-deployment.tftpl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${deployment_name}
  namespace: comfyui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${deployment_name}
  template:
    metadata:
      labels:
        app: ${deployment_name}
    spec:
      containers:
        - name: ${deployment_name}
          image: ${image_name}
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 2
              memory: 4G
      serviceAccountName: ${service_account}
---
apiVersion: v1
kind: Service
metadata:
  name: workflow-api
  namespace: comfyui
  labels:
    app: workflow-api
spec:
  selector:
    app: workflow-api
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  type: ClusterIP
